--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ beautifulsoup4==4.11.1
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cryptography==38.0.3
 Deprecated==1.2.13
 fastapi==0.85.1
 flower==1.2.0
@@ -19,12 +21,16 @@ httptools==0.5.0
 humanize==4.4.0
 idna==3.4
 kombu==5.2.4
+ndg-httpsclient==0.5.1
 packaging==21.3
 playwright==1.27.1
 prometheus-client==0.15.0
 prompt-toolkit==3.0.31
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.10.2
 pyee==8.1.0
+pyOpenSSL==22.1.0
 pyparsing==3.0.9
 python-dotenv==0.21.0
 pytz==2022.5
