--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 amqp==5.1.1
 anyio==3.6.2
 async-timeout==4.0.2
+asyncio==3.4.3
 beautifulsoup4==4.11.1
 billiard==3.6.4.0
+cachetools==5.2.0
 celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
@@ -12,21 +14,32 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 cryptography==38.0.3
+decorator==5.1.1
 Deprecated==1.2.13
 fastapi==0.85.1
 flower==1.2.0
+google-api-core==2.10.2
+google-auth==2.14.1
+google-cloud-webrisk==1.8.4
+googleapis-common-protos==1.56.4
 greenlet==1.1.3
+grpcio==1.50.0
+grpcio-status==1.50.0
 h11==0.14.0
 httptools==0.5.0
 humanize==4.4.0
 idna==3.4
+is-safe-url==1.0
 kombu==5.2.4
 ndg-httpsclient==0.5.1
 packaging==21.3
 playwright==1.27.1
 prometheus-client==0.15.0
 prompt-toolkit==3.0.31
+proto-plus==1.22.1
+protobuf==4.21.9
 pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pydantic==1.10.2
 pyee==8.1.0
@@ -37,6 +50,9 @@ pytz==2022.5
 PyYAML==6.0
 redis==4.3.4
 requests==2.28.1
+rsa==4.9
+SafeURL==1.0
+schedule==1.1.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
@@ -46,6 +62,7 @@ typing_extensions==4.4.0
 urllib3==1.26.12
 uvicorn==0.19.0
 uvloop==0.17.0
+validators==0.20.0
 vine==5.0.0
 watchfiles==0.18.0
 wcwidth==0.2.5
