--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -49,8 +49,10 @@ jobs:
           service: xandria-scraper
           image: europe-west3-docker.pkg.dev/xandria-web/xandria-scraper/xandria-scraper:latest
           region: europe-west3
-          flags: --no-allow-unauthenticated
+          flags: --no-allow-unauthenticated --vpc-connector=vpc
           credentials: ${{ secrets.SERVICE_ACCOUNT_KEY }}
 
       - name: Test deployment
         run: curl "${{ steps.deploy-run.outputs.url }}"
+
+        
