ci: on push to main

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -2,7 +2,7 @@
 name: Build, Push and Deploy Scraper Image w/ Google Cloud Platform
 on:
   push:
-    branches: [deploy]
+    branches: [main]
 
 jobs:
   build-push-gcr:
