--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ prometheus-client==0.15.0
 prompt-toolkit==3.0.31
 proto-plus==1.22.1
 protobuf==4.21.9
+proxy-checker==0.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
@@ -51,6 +52,7 @@ PyYAML==6.0
 redis==4.3.4
 requests==2.28.1
 rsa==4.9
+SafeURL==1.0
 schedule==1.1.0
 six==1.16.0
 sniffio==1.3.0
