--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ proxy-checker==0.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
+pycurl==7.45.1
 pydantic==1.10.2
 pyee==8.1.0
 pyOpenSSL==22.1.0
@@ -52,7 +53,6 @@ PyYAML==6.0
 redis==4.3.4
 requests==2.28.1
 rsa==4.9
-SafeURL==1.0
 schedule==1.1.0
 six==1.16.0
 sniffio==1.3.0
