--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ prometheus-client==0.15.0
 prompt-toolkit==3.0.31
 proto-plus==1.22.1
 protobuf==4.21.9
+proxy-checker==0.6
+py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
@@ -50,6 +52,7 @@ pytz==2022.5
 PyYAML==6.0
 redis==4.3.4
 requests==2.28.1
+retry==0.9.2
 rsa==4.9
 schedule==1.1.0
 six==1.16.0
