--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -49,7 +49,7 @@ jobs:
           service: xandria-scraper
           image: europe-west3-docker.pkg.dev/xandria-web/xandria-scraper/xandria-scraper:latest
           region: europe-west3
-          flags: --no-allow-unauthenticated --vpc-connector=vpc
+          flags: allow-unauthenticated
           credentials: ${{ secrets.SERVICE_ACCOUNT_KEY }}
 
       - name: Test deployment
