--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ async-timeout==4.0.2
 asyncio==3.4.3
 beautifulsoup4==4.11.1
 billiard==3.6.4.0
+blis==0.7.9
 cachetools==5.2.0
+catalogue==2.0.8
 celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
@@ -13,9 +15,13 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+confection==0.0.3
 cryptography==38.0.3
+cymem==2.0.7
 decorator==5.1.1
 Deprecated==1.2.13
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1-py3-none-any.whl
+extruct==0.14.0
 fastapi==0.85.1
 flower==1.2.0
 google-api-core==2.10.2
@@ -26,14 +32,31 @@ greenlet==1.1.3
 grpcio==1.50.0
 grpcio-status==1.50.0
 h11==0.14.0
+html-text==0.5.2
+html5lib==1.1
 httptools==0.5.0
 humanize==4.4.0
 idna==3.4
 is-safe-url==1.0
+isodate==0.6.1
+jellyfish==0.9.0
+Jinja2==3.1.2
+joblib==1.2.0
+jstyleson==0.0.2
 kombu==5.2.4
+langcodes==3.3.0
+lxml==4.9.1
+MarkupSafe==2.1.1
+mf2py==1.1.2
+murmurhash==1.0.9
 ndg-httpsclient==0.5.1
+networkx==2.8.8
+nltk==3.7
+numpy==1.23.5
 packaging==21.3
+pathy==0.8.1
 playwright==1.27.1
+preshed==3.0.8
 prometheus-client==0.15.0
 prompt-toolkit==3.0.31
 proto-plus==1.22.1
@@ -45,25 +68,43 @@ pydantic==1.10.2
 pyee==8.1.0
 pyOpenSSL==22.1.0
 pyparsing==3.0.9
+pyRdfa3==3.5.3
 python-dotenv==0.21.0
 pytz==2022.5
 PyYAML==6.0
+rdflib==6.2.0
 redis==4.3.4
+regex==2022.10.31
 requests==2.28.1
 rsa==4.9
 schedule==1.1.0
+scipy==1.9.3
+segtok==1.5.11
 six==1.16.0
+smart-open==5.2.1
 sniffio==1.3.0
 soupsieve==2.3.2.post1
+spacy==3.4.3
+spacy-legacy==3.0.10
+spacy-loggers==1.0.3
+srsly==2.4.5
 starlette==0.20.4
+tabulate==0.9.0
+thinc==8.1.5
 tornado==6.2
+tqdm==4.64.1
+typer==0.7.0
 typing_extensions==4.4.0
 urllib3==1.26.12
 uvicorn==0.19.0
 uvloop==0.17.0
 validators==0.20.0
 vine==5.0.0
+w3lib==2.0.1
+wasabi==0.10.1
 watchfiles==0.18.0
 wcwidth==0.2.5
+webencodings==0.5.1
 websockets==10.4
 wrapt==1.14.1
+yake==0.4.8
