--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Deprecated==1.2.13
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1-py3-none-any.whl
 extruct==0.14.0
 fastapi==0.85.1
+filelock==3.8.0
 flower==1.2.0
 google-api-core==2.10.2
 google-auth==2.14.1
@@ -76,6 +77,7 @@ rdflib==6.2.0
 redis==4.3.4
 regex==2022.10.31
 requests==2.28.1
+requests-file==1.5.1
 rsa==4.9
 schedule==1.1.0
 scipy==1.9.3
@@ -91,6 +93,7 @@ srsly==2.4.5
 starlette==0.20.4
 tabulate==0.9.0
 thinc==8.1.5
+tldextract==3.4.0
 tornado==6.2
 tqdm==4.64.1
 typer==0.7.0
